tests/ui/fail/partial/missing_partial.rs
use mergeme::Merge;

#[derive(Merge)]
// Missing `#[partial(...)]`.
struct Config {
    name: String,
    dependencies: Vec<String>,
}

fn main() {}
